# prediction-of-soil-organic-carbon

./: README.md  pyproject.toml
data/: training_data.csv
data/models/: pca.pkl  random_forest_model.pkl
notebook/: workflow.ipynb
src/: data_processing.py  logging_configuration.py  modelling.py  plotting.py  utils.py
