[tool.poetry]
name = "prediction-of-soil-organic-carbon"
version = "0.1.0"
description = "A package to predict soil organic carbon using machine learning algorithm and geospatial embeddings."
authors = ["ghazwan namou jablak <ghazwan.namou_jablak@syngenta.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.3"
geopandas = "^1.1.2"
rasterio = "^1.4.4"
matplotlib = "^3.10.8"
scikit-learn = "^1.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
